--- a/app/src/main/res/layout/activity_capital_gain_loss.xml
+++ b/app/src/main/res/layout/activity_capital_gain_loss.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".notes"
+    android:id="@+id/ScrollView01"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -33,7 +41,7 @@
 
             android:src="@drawable/bars"
             app:civ_border_color="#254651"
-            app:civ_border_width="10dp" />
+            app:civ_border_width="5dp" />
 
 
         <TextView
@@ -190,4 +198,44 @@
 
     </ListView>
 
+    <LinearLayout
+        android:id="@+id/meh2"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="0dp"
+        android:background="#B74C3E"
+        android:orientation="horizontal"
+        >
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:paddingLeft="40dp">
+            <Button
+                android:id="@+id/home_button"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/home_button"
+                android:gravity="center"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:paddingRight="40dp"
+            android:layout_marginHorizontal="250dp">
+            <Button
+                android:id="@+id/search"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginTop="16dp"
+
+                android:background="@drawable/search" />
+
+        </LinearLayout>
+    </LinearLayout>
+
 </LinearLayout>
+
+</ScrollView>
