--- a/app/src/main/res/layout/activity_trade_history.xml
+++ b/app/src/main/res/layout/activity_trade_history.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,61 +8,76 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/action_bar_trade"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".WatchListActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="#B74C3E"
-        android:id="@+id/watch_title" >
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/binoculars"/>
+        android:id="@+id/trade_bar"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:background="#B74C3E">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/history"
+        app:civ_border_color="#254651"
+        app:civ_border_width="5dp"
+        android:paddingRight="10dp"
+        android:contentDescription="TODO"/>
 
-        <TextView
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="30dp"
-            android:gravity="center"
-            android:text="WATCHLIST"
-            android:textColor="#ffff"
-            android:fontFamily="sans-serif-condensed-medium"
+    <TextView
+        android:id="@+id/tran_title"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="30dp"
 
-            android:textSize="30sp"
-            android:textStyle="bold"/>
+        android:text="TRADE HISTORY"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:textSize="30sp"
+        android:textStyle="bold"/>
 
-    </LinearLayout>
+</LinearLayout>
+
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_below="@+id/watch_title"
+        android:id="@+id/tradeRecycle"
+        android:layout_below="@id/trade_bar"
+        android:layout_width="match_parent"
+        android:layout_height="560dp"
+        android:background="@color/white"
+        android:padding="4dp"
+        android:scrollbars="vertical" />
+
+    <TextView
+        android:id="@+id/empty_trade"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="15dp"
-        android:scrollbars="vertical" />
+        android:gravity="center"
+        android:text="No Trade History to Show"
+        android:textColor="@color/blue"
+        android:textSize="25sp"
+        android:visibility="invisible" />
 
 
     <LinearLayout
         android:id="@+id/meh2"
         android:layout_width="fill_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="670dp"
+        android:layout_below="@+id/tradeRecycle"
         android:layout_marginBottom="0dp"
         android:background="#B74C3E"
         android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
         >
+
+
         <LinearLayout
             android:layout_width="100dp"
             android:layout_height="60dp"
-            android:paddingLeft="40dp">
+            android:paddingLeft="40dp"
+            android:layout_marginBottom="0dp">
             <Button
                 android:id="@+id/home_button"
                 android:layout_width="24dp"
@@ -86,5 +102,8 @@
 
         </LinearLayout>
     </LinearLayout>
+
+
 </RelativeLayout>
+
 </ScrollView>
