--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -30,7 +30,6 @@
             app:civ_border_width="10dp"
             android:paddingRight="10dp"
             android:contentDescription="TODO"/>
-
         <TextView
         android:id="@+id/tran_title"
         android:layout_width="200dp"
@@ -332,6 +331,45 @@
         android:textSize="15dp"
         android:gravity="center"
         android:text="@string/record"/>
+
+    <LinearLayout
+        android:id="@+id/meh2"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginBottom="0dp"
+        android:background="#B74C3E"
+        android:orientation="horizontal"
+        >
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:paddingLeft="40dp">
+            <Button
+                android:id="@+id/home_button"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/home_button"
+                android:gravity="center"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="60dp"
+            android:paddingRight="40dp"
+            android:layout_marginHorizontal="250dp">
+            <Button
+                android:id="@+id/search"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginTop="16dp"
+
+                android:background="@drawable/search" />
+
+        </LinearLayout>
+    </LinearLayout>
+
 
 </LinearLayout>
 </ScrollView>
