--- a/app/src/main/res/layout/activity_watch_list.xml
+++ b/app/src/main/res/layout/activity_watch_list.xml
@@ -23,6 +23,7 @@
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_marginLeft="8dp"
             android:src="@drawable/binoculars"/>
 
 
