--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -52,37 +52,28 @@
             android:paddingBottom="24dp">
 
 
-            <ImageView
-                android:id="@+id/edit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="16dp"
-                android:clickable="true"
-
-                android:src="@android:drawable/ic_menu_edit" />
-
             <TextView
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="100dp"
+                android:layout_marginTop="50dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="90dp"
-                android:text="Bahram Khalili"
+                android:text="First Last"
                 android:textColor="#fff"
                 android:textSize="30sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginEnd="10dp"
+                />
 
             <TextView
                 android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/name"
+                android:layout_below="@id/name"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                android:text="Khalili"
+                android:text="userName"
                 android:textColor="#fff"
                 android:textSize="20sp" />
 
@@ -108,6 +99,7 @@
             />
         <TextView
             android:layout_below="@id/logof"
+            android:id="@+id/textfoot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Your Finiacial Footprint"
@@ -119,7 +111,18 @@
             android:textColor="#B74C3E"
             />
 
-
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textfoot"
+            android:layout_marginTop="50dp"
+            android:layout_centerInParent="true"
+            android:text="Logout"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:backgroundTint="@color/greyBlue"
+            />
 
 
 
