--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -67,4 +67,23 @@
             android:textColor="@color/blue"
             android:text="@string/register"/>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:textColor="@color/blue"
+            android:text="@string/forgot"/>
+        <TextView
+            android:id="@+id/textview_reset"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:paddingLeft="10dp"
+            android:textStyle="bold"
+            android:textColor="@color/blue"
+            android:text="@string/reset"/>
+    </LinearLayout>
 </LinearLayout>
