--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,23 +18,31 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="74dp"
+        android:layout_height="90dp"
         android:background="#B74C3E"
         android:orientation="horizontal"
         android:layout_gravity="center">
-
+        <ImageView
+            android:id="@+id/news_icon"
+            android:clickable="true"
+            android:layout_width="64dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/news"/>
         <TextView
             android:id="@+id/home_page"
-            android:layout_width="258dp"
+            android:layout_width="240dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:fontFamily="sans-serif-condensed-medium"
-            android:paddingLeft="150dp"
+            android:paddingLeft="85dp"
             android:text="HOME"
             android:textColor="@color/white"
             android:textSize="35sp"
             android:textStyle="bold" />
     </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
