CHNAGED CAPITAL GAIN LOSS

--- a/app/src/main/res/layout/activity_capital_gain_loss.xml
+++ b/app/src/main/res/layout/activity_capital_gain_loss.xml
@@ -52,8 +52,6 @@
             android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center"
             android:text="CAPITAL GAIN/LOSS"
-
-
             android:textSize="30sp"
             android:textStyle="bold"
             tools:ignore="HardcodedText" />
@@ -79,29 +77,27 @@
             <TextView
                 android:id="@+id/Gain_dollars"
                 android:layout_width="211dp"
-                android:layout_height="83dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
-
                 android:baselineAligned="false"
                 android:gravity="center"
                 android:orientation="vertical"
-
-                android:textColor="#254651"
-                android:textSize="16dp"
+                android:textColor="#B74C3E"
+                android:textSize="25sp"
+                android:textStyle="bold"
                 tools:ignore="InvalidId" />
 
             <TextView
                 android:id="@+id/Gain_percent"
                 android:layout_width="212dp"
-                android:layout_height="83dp"
+                android:layout_height="80dp"
                 android:layout_weight="1"
                 android:baselineAligned="false"
                 android:gravity="center"
                 android:orientation="vertical"
-
-                android:textColor="#254651"
-                android:textSize="16dp"
-
+                android:textColor="#B74C3E"
+                android:textSize="25sp"
+                android:textStyle="bold"
                 tools:ignore="InvalidId"
                 />
         </LinearLayout>
@@ -119,8 +115,9 @@
             android:gravity="center"
             android:orientation="vertical"
             android:text="Ticker"
+            android:textStyle="bold"
             android:textColor="#254651"
-            android:textSize="14dp" />
+            android:textSize="18dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -133,12 +130,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_weight="66.6"
-
+                android:textStyle="bold"
                 android:gravity="center"
                 android:text="Stock Name"
                 android:textAlignment="center"
                 android:textColor="#254651"
-                android:textSize="14dp" />
+                android:textSize="16dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -150,11 +147,11 @@
                     android:id="@+id/profit_percent"
                     android:layout_width="75dp"
                     android:layout_height="40dp"
-
+                    android:textStyle="bold"
                     android:gravity="center"
                     android:text="%"
                     android:textColor="#254651"
-                    android:textSize="14dp" />
+                    android:textSize="18dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -168,9 +165,9 @@
                         android:layout_height="40dp"
                         android:gravity="center"
                         android:text="$"
-
+                        android:textStyle="bold"
                         android:textColor="#254651"
-                        android:textSize="14dp"/>
+                        android:textSize="18dp"/>
 
                 </LinearLayout>
 
